--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
   "name": "bd2_sistema_de_encuestas",
   "version": "1.0.0",
-  "description": "Proyecto 1",
+  "description": "Sistema de encuestas",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
     "mysql2": "^3.9.6",
     "pg": "^8.11.5",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "mongodb": "^4.2.0",
+    "redis": "^4.6.6",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.1.4"
   },
   "devDependencies": {
     "sequelize-cli": "^6.6.2"
-  }
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
